# image-multi-asset-extractor

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_image_multi_asset_extractor.md  RELEASE_CHECKLIST.md  SECURITY.md  app.py  config.json  docker-compose.yml  extract_assets.py  presets.json  pyproject.toml  requirements-amd-directml.txt  requirements-amd-rocm.txt  requirements-cpu.txt  requirements-gpu-nvidia.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-check.yml
docs/: FAQ.md  GPU_BACKENDS.md  INSTALL.md  NVIDIA_CUDA.md
examples/configs/: roads-waterways.json  xianxia-buildings.json
scripts/: install_amd_directml.bat  install_amd_directml.ps1  install_amd_rocm.sh  install_cpu.bat  install_cpu.ps1  install_cpu.sh  install_nvidia.ps1  install_nvidia.sh  run_cli.ps1  run_cli.sh  run_ui.bat  run_ui.ps1  run_ui.sh
